<resources>
    <string name="app_name">"Diagnostika 5"</string>
    <string name="pridat">Pridať</string>
    <string name="meno">Meno:</string>
    <string name="datum">Datum:</string>
    <string name="poznamka">Poznámka:</string>
    <string name="nameran_hodnoty_v_sekund_ch">Namerané hodnoty v sekundách:</string>
    <string name="mapa_energetickej_asymetrie">Mapa energetickej asymetrie (jang-červena):</string>
    <string name="odstran">Odstráň</string>
    <string name="namerane_hodnoty">Namerané hodnoty:</string>
    <string name="spat">Späť</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
