<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.upjs.ics.diagnostika5.PridajManualneActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/meno"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="18dp"/>
                <EditText
                    android:id="@+id/menoPridajMEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-40dp"
                android:layout_marginBottom="-40dp">

                <DatePicker
                    android:id="@+id/datumDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginRight="-30dp"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    />

                <TimePicker
                    android:id="@+id/casTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginRight="-30dp"
                    android:timePickerMode="spinner"
                    />
            </LinearLayout>

            <TextView
                android:text="@string/namerane_hodnoty"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textSize="18dp"/>

           <TableLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:paddingLeft="10dp"
               android:paddingRight="10dp">
               <TableRow>
                   <!--0-->
                   <TextView
                       android:text="HL"
                       android:layout_weight="1"
                       android:gravity="center"
                       />
                   <TextView
                       android:text="HR"
                       android:layout_weight="1"
                       android:gravity="center"
                       />
                   <TextView
                       android:text="FL"
                       android:layout_weight="1"
                       android:gravity="center"
                       />
                   <TextView
                       android:text="FR"
                       android:layout_weight="1"
                       android:gravity="center"
                       />
               </TableRow>

               <TableRow>
                   <!--1-->
                   <EditText
                       android:id="@+id/hl1EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HL1"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/hr1EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HR1"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fl1EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FL1"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fr1EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FR1"
                       android:textCursorDrawable="@null"/>
               </TableRow>

               <TableRow>
                   <!--2-->
                   <EditText
                       android:id="@+id/hl2EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HL2"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/hr2EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HR2"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fl2EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FL2"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fr2EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FR2"
                       android:textCursorDrawable="@null"/>
               </TableRow>

               <TableRow>
                   <!--3-->
                   <EditText
                       android:id="@+id/hl3EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HL3"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/hr3EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HR3"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fl3EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FL3"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fr3EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FR3"
                       android:textCursorDrawable="@null"/>
               </TableRow>

               <TableRow>
                   <!--4-->
                   <EditText
                       android:id="@+id/hl4EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HL4"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/hr4EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HR4"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fl4EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FL4"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fr4EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FR4"
                       android:textCursorDrawable="@null"/>
               </TableRow>

               <TableRow>
                   <!--5-->
                   <EditText
                       android:id="@+id/hl5EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HL5"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/hr5EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HR5"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fl5EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FL5"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fr5EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FR5"
                       android:textCursorDrawable="@null"/>
               </TableRow>

               <TableRow>
                   <!--6-->
                   <EditText
                       android:id="@+id/hl6EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HL6"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/hr6EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="HR6"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fl6EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FL6"
                       android:textCursorDrawable="@null"/>
                   <EditText
                       android:id="@+id/fr6EditText"
                       android:gravity="center"
                       android:layout_weight="1"
                       android:inputType="number"
                       android:hint="FR6"
                       android:textCursorDrawable="@null"/>
               </TableRow>

           </TableLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/poznamka"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="18dp"/>
                <EditText
                    android:id="@+id/poznamkaPridajMEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"

                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ulož"
                android:onClick="ulozitZaznam"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"/>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</ScrollView>
